# K-Resilient-Data-Sharing-Desktop-App

./: .gitignore  README.md  copyright_source_file_list.txt  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/benchmark_results/: correctness_results.csv  enron_peks_vs_paeks_comparison.csv  enron_raw_results.csv  enron_summary_results.csv  run_metadata.txt  thread_scaling_pilot.csv  thread_scaling_pilot_metadata.txt  wrong_keyword_rejection_evidence.txt
src-tauri/benchmark_results/.matplotlib/: fontlist-v390.json
src-tauri/mcore/: Cargo.toml
src-tauri/mcore/src/: lib.rs
src-tauri/mcore/src/anssi/: big.rs  dbig.rs  ecdh.rs  ecp.rs  eddsa.rs  fp.rs  hpke.rs
src-tauri/mcore/src/bls12383/: big.rs  bls.rs  dbig.rs  ecdh.rs  ecp.rs  ecp2.rs  eddsa.rs  fp.rs  fp12.rs  fp2.rs  fp4.rs  hpke.rs  mpin.rs  pair.rs
src-tauri/mcore/src/bls12443/: big.rs  bls.rs  dbig.rs  ecdh.rs  ecp.rs  ecp2.rs  eddsa.rs  fp.rs  (+6 more)
src-tauri/src/: lib.rs  main.rs
src-tauri/src/kr_ibe/: api.rs  ciphertext.rs  main.rs  mod.rs  params.rs  plaintext.rs  polynomial.rs  private_key.rs
src-tauri/src/kr_ibi/: api.rs  main.rs  mod.rs  params.rs
src-tauri/src/kr_paeks/: api.rs  ciphertext.rs  lagrange.rs  main.rs  mod.rs  params.rs  polynomial.rs  private_key.rs  public_key.rs  trapdoor.rs
src-tauri/src/kr_peks/: api.rs  ciphertext.rs  main.rs  mod.rs  params.rs  polynomial.rs  private_key.rs  public_key.rs  trapdoor.rs  utils.rs
src-tauri/src/system/: auth.rs  benchmark.rs  download.rs  mod.rs  search.rs  setup.rs  state.rs  upload.rs  user.rs  utils.rs
(+298 files in other folders)
