[package]
name = "k-resilient-suite-react"
version = "1.0.0"
description = "A Tauri App"
authors = ["PWKHO"]
edition = "2021"
default-run = "k-resilient-suite-react"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "k_resilient_suite_react_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aes-gcm = "0.10.3"
generic-array = "0.14.7"
mcore= {path="mcore", version="0.1.0"}
rand="0.8.4"
once_cell = "1.18"
mysql = "23.0"
log = "0.4"
rayon = "1.10"
serde_cbor = "0.11"
base64 = "0.21"
sha2 = "0.10"
hex = "0.4"
